This commit will fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,10 @@ html {
   font-family: Georgia, serif;
 }
 
-body {
+body,
+a {
   background-color: #fff;
+  color: #000;
 }
 
 h1 {
@@ -22,10 +24,6 @@ h1 {
   z-index: 100;
 }
 
-a {
-  color: #000;
-}
-
 .container {
   border-top: 2px solid rgba(28, 14, 0, .5);
   border-bottom: 2px solid rgba(28, 14, 0, .5);
@@ -33,7 +31,7 @@ a {
 
 .h1-container {
   position: absolute;
-  background: linear-gradient(to bottom, rgba(28, 14, 0, .4) 3%, rgba(0, 0, 0, .3), rgba(0, 0, 0, 0));
+  background: linear-gradient(to bottom, rgba(28, 14, 0, .7) 20%, rgba(0, 0, 0, .3), rgba(0, 0, 0, 0));
   width: 634px;
   z-index: 1000;
 }
